force-app/main/default/objects/CommercientSF__GenHistory__c/CommercientSF__GenHistory__c.object-meta.xml
<CustomObject>
    <label>Syspro General Ledger History</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro General Ledger Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>