force-app/main/default/objects/CommercientSF__GenHistory__c/fields/CommercientSF__BeginYearBalance__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BeginYearBalance__c</fullName>
    <description>BeginYearBalance</description>
    <label>BeginYearBalance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>