force-app/main/default/objects/CommercientSF__GenHistory__c/fields/CommercientSF__ClosingBalPer10__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ClosingBalPer10__c</fullName>
    <description>ClosingBalPer10</description>
    <label>ClosingBalPer10</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>