force-app/main/default/objects/CommercientSF__GenHistory__c/fields/CommercientSF__ClosingBalPer11__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ClosingBalPer11__c</fullName>
    <description>ClosingBalPer11</description>
    <label>ClosingBalPer11</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>