force-app/main/default/objects/CommercientSF__GenHistory__c/fields/CommercientSF__ClosingBalPer12__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ClosingBalPer12__c</fullName>
    <description>ClosingBalPer12</description>
    <label>ClosingBalPer12</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>