force-app/main/default/objects/CommercientSF__GenHistory__c/fields/CommercientSF__Company__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Company__c</fullName>
    <description>Company</description>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>