force-app/main/default/objects/CommercientSF__GenHistory__c/fields/CommercientSF__GlCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlCode__c</fullName>
    <description>GlCode</description>
    <label>GlCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>