force-app/main/default/objects/CommercientSF__GenHistory__c/fields/CommercientSF__GlYear__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlYear__c</fullName>
    <description>GlYear</description>
    <label>GlYear</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>