force-app/main/default/objects/CommercientSF__GenHistory__c/fields/CommercientSF__Syspro_General_Ledger_Master__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Syspro_General_Ledger_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro General Ledger Master</label>
    <referenceTo>CommercientSF__GenMaster__c</referenceTo>
    <relationshipLabel>Syspro General Ledger Historys</relationshipLabel>
    <relationshipName>Syspro_General_Ledger_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>